--- a/form-app/src/components/Form/style.css
+++ b/form-app/src/components/Form/style.css
@@ -1,5 +1,6 @@
 form{
-    width: 900px;
+    max-width: 900px;
+    width: 100%;
     background-color: rgb(126, 126, 126);
     display: flex;
     flex-direction: row;
@@ -15,7 +16,8 @@ input{
     border-radius: 4px;
     border: 0px;
     box-shadow: 2px;
-    width: 400px;
+  width: 400px;
+   
     height: 25px;
 }
 .rad{
@@ -24,4 +26,9 @@ input{
 .button{
     background-color: rgb(0, 200, 255);
     margin-top: 30px;
+    border-radius: 4px;
+    border: 0px;
+    box-shadow: 2px;
+    width: 400px;
+    height: 25px;
 }
