--- a/form-app/src/components/FormAPI/style.css
+++ b/form-app/src/components/FormAPI/style.css
@@ -1,13 +1,14 @@
 .form{
-    max-width: 900px;
+    max-width: 1000px;
     width: 100%;
     background-color: rgb(126, 126, 126);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 20px;
+   
 }
 .fieldset{
+    padding: 20px;
     border: 0px;
     display: flex;
     flex-direction: column;
